kubernetes/apps/immich/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-tailscale
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: immich-server
      port:
        name: http
  tls:
    - hosts:
        - immich
